--- a/views/layouts/account.handlebars
+++ b/views/layouts/account.handlebars
@@ -86,9 +86,11 @@
             top: 564px;
         }
 
-        .section-subscribe {
-            background-color: #e0d1b5;
-        }
+        .quizName {
+            color: #ffaa00;
+            font-family: 'Libre Baskerville';
+            font-style: italic;
+    }
     </style>
 
     <title>The Healing Inc.</title>
