--- a/views/quiz/listQuizzes.handlebars
+++ b/views/quiz/listQuizzes.handlebars
@@ -16,7 +16,7 @@
             <h6 class="text-muted">#quiz: {{id}}</h6>
             <br><br><br>
             <a href="/quiz/quizResult/{{id}}">
-                <h1 class="card-title title">For <span class="quizName">{{quizName}}</span></h1>
+                <h1 class="card-title title">For <br><span class="quizName">{{quizName}}</span></h1>
             </a>
             <br><br><br>
         </div>
@@ -49,16 +49,6 @@
 		width: 200px;
         text-align: center;
         float: right;
-    }
-
-    {{!-- #top {
-        {{!-- display: inline; --}}
-    } --}}
-
-    .quizName {
-        color: #ffaa00;
-        font-family: 'Libre Baskerville';
-        font-style: italic;
     }
 
     .delete {
