--- a/views/product/addProduct.handlebars
+++ b/views/product/addProduct.handlebars
@@ -7,12 +7,12 @@
 				<input class="form-control" id="name" name="name" onblur="initialiseName()" required />
 			</div>
 
-			<div class = form-group>
+			{{!-- <div class = form-group>
 				<label class="font-italic" for="image">Product image</label>
 				<p><input type="file"  accept="image/*" name="image" id="file"  onchange="loadFile(event)" style="display: none;" required></p>
 				<p><label for="file" style="cursor: pointer;">Upload Image</label></p>
 				<p><img id="output" width="200" /></p>			
-			</div>
+			</div> --}}
 
 			<div class="form-group">
 				<label class="font-italic" for="stock">Stock</label>
@@ -40,33 +40,33 @@
 						<label class="font-italic">Category</label>
 						<br>
 						<div class="form-check form-check-inline">
-							<input class="form-check-input" type="" name="category" id="heart"
+							<input class="form-check-input" type="checkbox" name="category" id="heart"
 								value="heart">
 							<label class="form-check-label" for="heart">Heart</label>
 						</div>
 						<div class="form-check form-check-inline">
-							<input class="form-check-input" type="checkbox" name="subtitles" id="brain"
+							<input class="form-check-input" type="checkbox" name="category" id="brain"
 								value="brain">
 							<label class="form-check-label" for="brain">Brain</label>
 						</div>
 						<div class="form-check form-check-inline">
-							<input class="form-check-input" type="checkbox" name="subtitles" id="gut" value="gut">
+							<input class="form-check-input" type="checkbox" name="category" id="gut" value="gut">
 							<label class="form-check-label" for="gut">Gut</label>
 						</div>
 						<div class="form-check form-check-inline">
-							<input class="form-check-input" type="checkbox" name="subtitles" id="eyes" value="eyes">
+							<input class="form-check-input" type="checkbox" name="category" id="eyes" value="eyes">
 							<label class="form-check-label" for="eyes">Eyes</label>
 						</div>
 						<div class="form-check form-check-inline">
-							<input class="form-check-input" type="checkbox" name="subtitles" id="immunity" value="immunity">
+							<input class="form-check-input" type="checkbox" name="category" id="immunity" value="immunity">
 							<label class="form-check-label" for="immunity">Immunity</label>
 						</div>
 						<div class="form-check form-check-inline">
-							<input class="form-check-input" type="checkbox" name="subtitles" id="joints" value="joints">
+							<input class="form-check-input" type="checkbox" name="category" id="joints" value="joints">
 							<label class="form-check-label" for="joints">Joints</label>
 						</div>
 						<div class="form-check form-check-inline">
-							<input class="form-check-input" type="checkbox" name="subtitles" id="skin" value="skin">
+							<input class="form-check-input" type="checkbox" name="category" id="skin" value="skin">
 							<label class="form-check-label" for="skin">Skin</label>
 						</div>
 					</div>
@@ -80,9 +80,9 @@
 	</div>
 </div>
 
-<script>
-	var loadFile = function(event) {
+{{!-- <script>
+	!-- var loadFile = function(event) {
 		var image = document.getElementById('output');
 		image.src = URL.createObjectURL(event.target.files[0]);
-	};
-</script>
+	}; --
+</script> --}}
