product with id problem

--- a/views/partials/_staffnav.handlebars
+++ b/views/partials/_staffnav.handlebars
@@ -42,7 +42,20 @@
                     </div>
                 </div>
             </li>
-
+            <!-- Product Dropdown -->
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
+                    aria-expanded="true" aria-controls="collapseTwo">
+                    <i class="fas fa-fw fa-cog"></i>
+                    <span>Product</span>
+                </a>
+                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <a class="collapse-item" href="/product/addProduct">Add Product</a>
+                        <a class="collapse-item" href="/product/listProducts">Products</a>
+                    </div>
+                </div>
+            </li>
             <!-- Heading -->
             <div class="sidebar-heading">
                 Interface
