--- a/views/product/listProducts.handlebars
+++ b/views/product/listProducts.handlebars
@@ -1,43 +1,47 @@
 <div class="container">
-	{{#if videos}}
+	{{#if products}}
 	<div class="card card-body">
-		<h3 class="text-primary">Video Jots</h3>
-		{{#each videos}}
+		<h3 class="text-primary">Products</h3>
+		{{#each products}}
 		<div class="card border-primary mb-2 w-100 mx-auto">
 			<div class="card-header">
-				<h5 class="card-title">{{title}}</h5>
+				<h5 class="card-title">{{name}}</h5>
 			</div>
 			<div class="card-body">
 				<div class="row">
 					<div class="col-sm-12 col-md-12 col-lg-3">
-						<p class="font-italic">Subtitles</p>
+						<p class="font-italic">Stock</p>
 						<p class="text-info">
-							{{replaceCommas subtitles}}
+							{{stock}}
 						</p>
 					</div>
 					<div class="col-sm-12 col-md-12 col-lg-3">
-						<p class="font-italic">Language</p>
+						<p class="font-italic">Size</p>
 						<p class="text-info">
-							{{replaceCommas language}}
+							{{size}}
 						</p>
 					</div>
 					<div class="col-sm-12 col-md-12 col-lg-2">
-						<p class="font-italic">Classification</p>
-						<p class="text-info">Classification</p>
+						<p class="font-italic">Price</p>
+						<p class="text-info">
+							${{price}}
+						</p>
 					</div>
 					<div class="col-sm-12 col-md-12 col-lg-2">
-						<p class="font-italic">Date of Release</p>
-						<p class="text-info">{{formatDate dateRelease 'DD MMM YYYY'}}</p>
+						<p class="font-italic">Category</p>
+						<p class="text-info">
+							{{category}}
+						</p>
 					</div>
 					<div class="col-sm-12 col-md-12 col-lg-2">
 						<p>
-							<a href="/video/editVideo/{{id}}" class="card-link mb-2">
+							<a href="/product/editProduct/{{id}}" class="card-link mb-2">
 								<i class="fas fa-pencil-alt"></i>
 								Edit
 							</a>
 						</p>
 						<p>
-							<a href="/video/deleteVideo/{{id}}" class="card-link" data-toggle="confirmation" data-title="Confirm delete?">
+							<a href="/product/deleteProduct/{{id}}" class="card-link" data-toggle="confirmation" data-title="Confirm delete?">
 								<i class="far fa-trash-alt"></i>
 								Delete
 							</a>
@@ -63,7 +67,7 @@
 		{{/each}}
 	</div>
 	{{else}}
-	<h3>No videos jotted</h3>
+	<h3>No products created</h3>
 	{{/if}}
 </div>
 
