--- a/views/product/addProduct.handlebars
+++ b/views/product/addProduct.handlebars
@@ -15,27 +15,40 @@
 			</div> --}}
 
 			<div class="form-group">
-				<label class="font-italic" for="stock">Stock</label>
-				<input class="form-control" type="number" id="stock" name="stock" required/>
-			</div>
-
-			<div class="form-group">
-				<label for="size">Pack Size</label>
-				<select id="size" name="size" required>
-				<option value="25">25</option>
-				<option value="50">50</option>
-				<option value="75">75</option>
-				<option value="100">100</option>
-				</select>
-			</div>
-
-			<div class="form-group">
-				<label class="font-italic" for="price">Price</label>
-				<input class="form-control" type="text" id="price" name="price" required/>
+				<div class="row mb-2">
+					<div class="col-12 col-sm-12 col-md-12 col-lg-6 mb-4">
+                        <label class="font-italic" for="stock">Stock</label>
+                        <input class="form-control" type="number" id="stock" name="stock" required/>
+					</div>
+					<div class="col-12 col-sm-12 col-md-6 col-lg-6">
+						<label class="font-italic">Pack Size</label>
+						<br>
+						<div class="form-check form-check-inline">
+							<input class="form-check-input" type="radio" id="25" value="25" name="classification" checked>
+							<label class="form-check-label" for="25">25</label>
+						</div>
+						<div class="form-check form-check-inline">
+							<input class="form-check-input" type="radio" id="50" value="50" name="classification">
+							<label class="form-check-label" for="50">50</label>
+						</div>
+						<div class="form-check form-check-inline">
+							<input class="form-check-input" type="radio" id="75" value="75" name="classification">
+							<label class="form-check-label" for="75">75</label>
+						</div>
+						<div class="form-check form-check-inline">
+							<input class="form-check-input" type="radio" id="100" value="100" name="classification">
+							<label class="form-check-label" for="100">100</label>
+						</div>
+					</div>
+				</div>
 			</div>
 
 			<div class="form-group">
 				<div class="row">
+					<div class="col-12 col-sm-12 col-md-12 col-lg-6">
+						<label class="font-italic" for="price">Price</label>
+						<input class="form-control" type="text" id="price" name="price" required/>
+					</div>
 					<div class="col-12 col-sm-12 col-md-6 col-lg-6">
 						<label class="font-italic">Category</label>
 						<br>
@@ -71,7 +84,6 @@
 						</div>
 					</div>
 				</div>
-
 			</div>
 			<br>
 			<button id="btnSubmit" type="submit" class="btn btn-primary">Add
