--- a/views/quiz/addQuiz.handlebars
+++ b/views/quiz/addQuiz.handlebars
@@ -1,5 +1,3 @@
-{{!-- <link rel="stylesheet" href="/css/quiz.css"> --}}
-
 <style>
 p {
     font: poppins;
@@ -222,6 +220,43 @@ input[type="radio"]:checked::after {
   border:2px solid #ffaa00;
 }
 
+.container-gender {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+label.gender{
+  user-select: none;
+}
+input[type="radio"].gender {
+  display: none;
+}
+
+input[type="radio"].gender + label.gender {
+  z-index: 10;
+  margin: 0 10px 10px 0;
+  position: relative;
+  color: #ced4da;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.1);
+  font-weight: bold;
+  background-color: #ffffff;
+  border: 2px solid #ced4da;
+  cursor: pointer;
+  transition: all 200ms ease;
+}
+
+input[type="radio"].gender:checked + label.gender {
+  color: #495057;
+  background-color: #ced4da;
+}
+
+input[type="radio"].gender + label.gender {
+  padding: 0px 20px;
+  border-radius: 10px;
+  width: 100px;
+}
+
 </style>
 
 <div class="quiz-container">
@@ -236,15 +271,21 @@ input[type="radio"]:checked::after {
             <p><input type="text" placeholder="Chantalle's Headache Remedy" oninput="this.className = ''" name="quizName">
             </p>
         </div>
+
+        <div class="tab">
+            <div class="qn">Which gender are you assigned at birth?</div>
+            <div class="container-gender">
+                <input type='radio' id='male' checked='checked' name='gender' class="gender" value="male">
+                <label for='male' class="gender">Male</label>
+                <input type='radio' id='female' name='gender' class="gender" value="female">
+                <label for='female' class="gender">Female</label>
+            </div>
+        </div>
     
         <div class="tab">
             <div class="qn">What is your age?</div>
             <p><input type="text" placeholder="35" oninput="this.className = ''" name="age"></p>
         </div>
-    
-        {{!-- <div class="tab">When is your birthday?
-            <p><input type="date" oninput="this.className = ''"></p>
-        </div> --}}
     
         <div class="tab">
             <div class="qn">When it comes to traditional chinese medicine, you:</div>
@@ -287,7 +328,7 @@ input[type="radio"]:checked::after {
             <p>You can choose more than 1 area.</p>
             <div class="list">
                 <div class="form-element">
-                    <input type="checkbox" name="area" value="immunity" id="immunity">
+                    <input type="checkbox" name="area" value="immunity" id="immunity" onclick="ensureOneCheck('area', 'areaErr', 'nextBtn')">
                     <label for="immunity">
                         <div class="icon">
                             <i class="fa-solid fa-virus-covid"></i>
@@ -296,7 +337,7 @@ input[type="radio"]:checked::after {
                     </label>
                 </div>
                 <div class="form-element">
-                    <input type="checkbox" name="area" value="hair" id="hair">
+                    <input type="checkbox" name="area" value="hair" id="hair" onclick="ensureOneCheck('area', 'areaErr', 'nextBtn')">
                     <label for="hair">
                         <div class="icon">
                             <i class="fa-solid fa-person"></i>
@@ -305,7 +346,7 @@ input[type="radio"]:checked::after {
                     </label>
                 </div>
                 <div class="form-element">
-                    <input type="checkbox" name="area" value="stress" id="stress">
+                    <input type="checkbox" name="area" value="stress" id="stress" onclick="ensureOneCheck('area', 'areaErr', 'nextBtn')">
                     <label for="stress">
                         <div class="icon">
                             <i class="fa-solid fa-face-tired"></i>
@@ -314,8 +355,94 @@ input[type="radio"]:checked::after {
                     </label>
                 </div>
             </div>
-            {{!--
-        </div> --}}
+            <p class="text-danger m-0" id="areaErr" style="display:none">Please select at least one health area.</p>
+        </div>
+
+        <div class="tab">
+            <div class="qn">What is current diet like?</div>
+            <label class="option" id="border">
+                <input type="radio" name="diet" value="normal" />
+                <span class="option1">Normal</span>
+            </label>
+            <br>
+            <label class="option" id="border">
+                <input type="radio" name="diet" value="vegetarian" />
+                <span class="option1">Vegetarian</span>
+            </label>
+            <br>
+            <label class="option" id="border">
+                <input type="radio" name="diet" value="pescatarian" />
+                <span class="option1">Pescatarian</span>
+            </label>
+            <br>
+            <label class="option" id="border">
+                <input type="radio" name="diet" value="others" />
+                <span class="option1">Others</span>
+            </label>
+        </div>
+
+        <div class="tab">
+            <div class="qn">Are you on any medication?</div>
+            <label class="option" id="border">
+                <input type="radio" name="medication" value="no" />
+                <span class="option1">No</span>
+            </label>
+            <br>
+            <label class="option" id="border">
+                <input type="radio" name="medication" value="yes" />
+                <span class="option1">Yes</span>
+            </label>
+        </div>
+
+        <div class="tab">
+            <div class="qn">Do you have any allergies?</div>
+            <p>You can choose more than 1 allergy type.</p>
+            <div class="list">
+                <div class="form-element">
+                    <input type="checkbox" name="allergy" value="none" id="none"
+                        onclick="ensureOneCheck('allergy', 'allergyErr', 'nextBtn')">
+                    <label for="none">
+                        <div class="icon">
+                            <i class="fa-solid fa-xmark"></i>
+                            <p class="title">None</p>
+                        </div>
+                    </label>
+                </div>
+                <div class="form-element">
+                    <input type="checkbox" name="allergy" value="fish" id="fish"
+                        onclick="ensureOneCheck('allergy', 'allergyErr', 'nextBtn')">
+                    <label for="fish">
+                        <div class="icon">
+                            <i class="fa-solid fa-fish-fins"></i>
+                            <p class="title">Fish</p>
+                        </div>
+                    </label>
+                </div>
+                <div class="form-element">
+                    <input type="checkbox" name="allergy" value="egg" id="egg"
+                        onclick="ensureOneCheck('allergy', 'allergyErr', 'nextBtn')">
+                    <label for="egg">
+                        <div class="icon">
+                            <i class="fa-solid fa-egg"></i>
+                            <p class="title">Egg</p>
+                        </div>
+                    </label>
+                </div>
+            </div>
+            <p class="text-danger m-0" id="allergyErr" style="display:none">Please select one option.</p>
+        </div>
+
+        <div class="tab">
+            <div class="qn">Do you smoke?</div>
+            <label class="option" id="border">
+                <input type="radio" name="smoke" value="no" />
+                <span class="option1">No</span>
+            </label>
+            <br>
+            <label class="option" id="border">
+                <input type="radio" name="smoke" value="yes" />
+                <span class="option1">Yes</span>
+            </label>
         </div>
     
         <br>
@@ -331,6 +458,11 @@ input[type="radio"]:checked::after {
     
         <!-- Circles which indicates the steps of the form: -->
         <div style="text-align:center;margin-top:40px;">
+            <span class="step"></span>
+            <span class="step"></span>
+            <span class="step"></span>
+            <span class="step"></span>
+            <span class="step"></span>
             <span class="step"></span>
             <span class="step"></span>
             <span class="step"></span>
@@ -416,6 +548,23 @@ input[type="radio"]:checked::after {
             //... and adds the "active" class to the current step:
             x[n].className += " active";
         }
-    
+
+        function ensureOneCheck(checkBoxName, messageId, submitId) {
+            const checkBoxes = $('[name=' + checkBoxName + ']');
+            let checkCount = 0;
+            for (let i = 0; i < checkBoxes.length; i++) {
+                if (checkBoxes[i].checked)
+                    checkCount++;
+            }
+            if (checkCount === 0) {
+                $('#' + messageId).show();
+                $('#' + submitId).prop('disabled', true);
+                return false;
+            } else {
+                $('#' + messageId).hide();
+                $('#' + submitId).prop('disabled', false);
+                return true;
+            }
+        }
 
 </script>
